--- a/templates/home.html
+++ b/templates/home.html
@@ -125,8 +125,8 @@
         implicitly mapping their inputs into high-dimensional feature spaces.The objective of SVM algorithm is to 
         find a hyperplane in an N-dimensional space that distinctly classifies the data points.</p>
       <p><a class="btn btn-secondary" href="svm">SVM Example 1</a></p>
-      <p><a class="btn btn-secondary" href="#">SVM Example 2</a></p>
-      <p><a class="btn btn-secondary" href="#">SVM Example 3</a></p>
+      <p><a class="btn btn-secondary" href="svm1">SVM Example 2</a></p>
+      <p><a class="btn btn-secondary" href="svm2">SVM Example 3</a></p>
       <br>
       </div>
     </div><!-- /.col-lg-4 -->
