--- a/templates/logistic3.html
+++ b/templates/logistic3.html
@@ -312,7 +312,7 @@ var glu
       diab)
       $.ajax({
         type : "post",
-        url : "/logistic3",
+        url : "/logistic",
         data: {csrfmiddlewaretoken: '{{ csrf_token }}',
         age,
         tcol,
